tests/ui/match/ref_pat_eat_one_layer_2024/feature-gate-ref_pat_eat_one_layer_2024.stderr
error[E0308]: mismatched types
  --> $DIR/feature-gate-ref_pat_eat_one_layer_2024.rs:6:22
   |
LL |     if let Some(Some(&x)) = &Some(&Some(0)) {
   |                      ^^     --------------- this expression has type `&Option<&Option<{integer}>>`
   |                      |
   |                      expected integer, found `&_`
   |
   = note:   expected type `{integer}`
           found reference `&_`
help: consider removing `&` from the pattern
   |
LL |     if let Some(Some(x)) = &Some(&Some(0)) {
   |                      ~

error[E0308]: mismatched types
  --> $DIR/feature-gate-ref_pat_eat_one_layer_2024.rs:11:23
   |
LL |         let _: &u32 = x;
   |                ----   ^ expected `&u32`, found integer
   |                |
   |                expected due to this
   |
help: consider borrowing here
   |
LL |         let _: &u32 = &x;
   |                       +

error[E0308]: mismatched types
  --> $DIR/feature-gate-ref_pat_eat_one_layer_2024.rs:14:23
   |
LL |     if let Some(Some(&&x)) = &Some(Some(&0)) {
   |                       ^^     --------------- this expression has type `&Option<Option<&{integer}>>`
   |                       |
   |                       expected integer, found `&_`
   |
   = note:   expected type `{integer}`
           found reference `&_`
help: consider removing `&` from the pattern
   |
LL -     if let Some(Some(&&x)) = &Some(Some(&0)) {
LL +     if let Some(Some(&x)) = &Some(Some(&0)) {
   |

error[E0308]: mismatched types
  --> $DIR/feature-gate-ref_pat_eat_one_layer_2024.rs:18:17
   |
LL |     if let Some(&Some(x)) = &Some(Some(0)) {
   |                 ^^^^^^^^    -------------- this expression has type `&Option<Option<{integer}>>`
   |                 |
   |                 expected `Option<{integer}>`, found `&_`
   |
   = note:   expected enum `Option<{integer}>`
           found reference `&_`

error[E0308]: mismatched types
  --> $DIR/feature-gate-ref_pat_eat_one_layer_2024.rs:22:22
   |
LL |     if let Some(Some(&mut x)) = &mut Some(&mut Some(0)) {
   |                      ^^^^^^     ----------------------- this expression has type `&mut Option<&mut Option<{integer}>>`
   |                      |
   |                      expected integer, found `&mut _`
   |
   = note:           expected type `{integer}`
           found mutable reference `&mut _`
note: to declare a mutable binding use: `mut x`
  --> $DIR/feature-gate-ref_pat_eat_one_layer_2024.rs:22:22
   |
LL |     if let Some(Some(&mut x)) = &mut Some(&mut Some(0)) {
   |                      ^^^^^^
help: consider removing `&mut` from the pattern
   |
LL |     if let Some(Some(x)) = &mut Some(&mut Some(0)) {
   |                      ~

error[E0308]: mismatched types
  --> $DIR/feature-gate-ref_pat_eat_one_layer_2024.rs:26:22
   |
LL |     if let Some(Some(&x)) = &Some(&Some(0)) {
   |                      ^^     --------------- this expression has type `&Option<&Option<{integer}>>`
   |                      |
   |                      expected integer, found `&_`
   |
   = note:   expected type `{integer}`
           found reference `&_`
help: consider removing `&` from the pattern
   |
LL |     if let Some(Some(x)) = &Some(&Some(0)) {
   |                      ~

error[E0308]: mismatched types
  --> $DIR/feature-gate-ref_pat_eat_one_layer_2024.rs:30:27
   |
LL |     if let Some(&mut Some(&x)) = &Some(&mut Some(0)) {
   |                           ^^     ------------------- this expression has type `&Option<&mut Option<{integer}>>`
   |                           |
   |                           expected integer, found `&_`
   |
   = note:   expected type `{integer}`
           found reference `&_`
help: consider removing `&` from the pattern
   |
LL |     if let Some(&mut Some(x)) = &Some(&mut Some(0)) {
   |                           ~

error[E0308]: mismatched types
  --> $DIR/feature-gate-ref_pat_eat_one_layer_2024.rs:34:23
   |
LL |     if let Some(&Some(&mut x)) = &mut Some(&Some(0)) {
   |                       ^^^^^^     ------------------- this expression has type `&mut Option<&Option<{integer}>>`
   |                       |
   |                       expected integer, found `&mut _`
   |
   = note:           expected type `{integer}`
           found mutable reference `&mut _`
note: to declare a mutable binding use: `mut x`
  --> $DIR/feature-gate-ref_pat_eat_one_layer_2024.rs:34:23
   |
LL |     if let Some(&Some(&mut x)) = &mut Some(&Some(0)) {
   |                       ^^^^^^
help: consider removing `&mut` from the pattern
   |
LL |     if let Some(&Some(x)) = &mut Some(&Some(0)) {
   |                       ~

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
